# IDN_Assignment

./: .gitignore  README.md  log.html  output.xml  playwright-log.txt  pyproject.toml  report.html
Resource/: Account.resource  Content.resource  Headlines.resource  LatestNews.resource  MenuBar.resource  PageOverview.robot  TrendingNews.resource
Tests/: Headlines.robot  LatestNews.robot  Logo.robot  MenuBar.robot  Sign.robot  TrendingContent.robot  TrendingNews.robot
results/: log.html  output.xml  playwright-log.txt  report.html
