[project]
name = "idn-assignment"
version = "0.1.0"
description = "idn assignment"
authors = [
    {name = "nagabarong",email = "henricoverdian@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
package-mode = "false"
dependencies = [
    "robotframework (>=7.2.2,<8.0.0)",
    "robotframework-browser (>=19.4.0,<20.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
